CHANGELOG

>>VERSION 17.7.4
+ Added labradorite set of blocks
+ Returned "kill mob" type of quests
+ Returned "kill player" type of quests

* Changed prices for valuable items
* Changed some waypoint regions due to players' complaints. Essos wp can be unlocked in Kings Landing; Sothoryos - Ghiscar; Ulthos - Asshai; Ibben - Essos; Summer Islands - Sothoryos.
* Improved chest contents in all the world
* Improved andesite, rhyolite & basalt sets textures
* Improved Asshai City, improved a few Asshai structures
* Improved Asshai landspcape

* Fixed bug with wrong chest contents
* Fixed bug with Loras Tyrell
* Fixed bug with 25% of spawning a wrong structure at waypoint
* Fixed bug with slaves speechbank
* Fixed bug with towers in asshai

- Removed Carnotite set of blocks, because it turned out that it was uran ore

>>VERSION 17.7.3
+ Added full Polish edition (lore, speech, names, quests: prod. Axel)
+ Added strict title rules, as in the LOTR
+ Added min Y limit for waypoint creation, as in the LOTR
+ Added fellowship creation settings, as in the LOTR
+ Returned alignment zones feature

* Improved font pack, now with support of extended Latin & Cyrillic alphabets.
+ Improved cold weapon, some bugs and strange stats can be fixed.

* Fixed bug with saving level data
* Fixed bug with road near Bronze Gate & Sarsfield
* Fixed bug with towers quantity near "Three Towers" waypoint

>>VERSION 17.7.2
+ Recreated Polish translation (prod. Axel Snow)

* Improved 2nd Tyrosh male skin
* Improved stats of Joffrey's Crossbow

* Fixed bug with Essos & Dorne fort walls upon the road
* Fixed bug with Wyl & Hayford road
* Fixed bug with Beric Dayne spawning
* Fixed bug with chance of double Beric Dondarrion's drop
* Fixed bug with hillmen villages
* Fixed bug with crash caused by rhino riders
* Fixed bug with Mossovy Forts & Villages
* Fixed bug with desert scorpions instead of jungle scorpions spawning in tropical forests
* Fixed potential bugs, caused by "legendary" mercenaries